# advanced-welding-test-djordje_and_pradheep

./: .travis.yml  README.md  R_M.xml  sonar-project.properties  traj_test_plotting.ipynb
.ipynb_checkpoints/: traj_test_plotting-checkpoint.ipynb
advanced_welding_test/: CMakeLists.txt  package.xml
mir_awt_trajectory_generator/: CMakeLists.txt  package.xml
mir_awt_trajectory_generator/include/: awt_trajectory_generator.h
mir_awt_trajectory_generator/launch/: awt_trajectory_generator.launch
mir_awt_trajectory_generator/scripts/: awt_trajectory_generator_node.cpp  awt_trajectory_simulator_node.py
mir_awt_trajectory_generator/src/: awt_trajectory_generator.cpp
mir_awt_trajectory_generator/test/: trajectory_generator_unittest.cpp  velocity_commands_test.py
velocity_commands/: CMakeLists.txt  package.xml
velocity_commands/launch/: velocity_commands.launch
velocity_commands/src/: velocity_commands_node.cpp
velocity_commands/test/: velocity_commands_node_test.py
